flickering css fixed by removing root font size

--- a/styles/components/_home.scss
+++ b/styles/components/_home.scss
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  @include fadeInDown();
   .profile-name {
     font-size: 7rem;
     font-family: $secondary_font;
