--- a/styles/globals/_mixins.scss
+++ b/styles/globals/_mixins.scss
@@ -165,7 +165,7 @@ $visibilityDefault: hidden !default;
 @include keyframes(fadeInDown) {
   0% {
     opacity: 0;
-    @include transform(translateY(-2000px));
+    @include transform(translateY(-20px));
   }
   100% {
     opacity: 1;
