--- a/styles/main.scss
+++ b/styles/main.scss
@@ -6,9 +6,9 @@
 
 html {
     font-size: 62.5%;
-    @media (min-width: 100rem) {
-        font-size: 100%;
-    }
+    // @media (min-width: 100rem) {
+    //     font-size: 100%;
+    // }
 }
 
 body {
